@@ -5,6 +5,7 @@ $Id: Changes,v 1.1.1.1 2010-07-05 19:03:19 oops Exp $
 1.0.1
 	* Tue Apr 26 2011 JoungKyun.Kim <http://oops.org>
 	- start 1.0.1 tree
+	- fixed chardet.detect segfault on 64bit system
 
 1.0.0
     * Mon Jul  5 2010 JoungKyun.Kim <http://oops.org>
